dynamically building radio buttons

--- a/index.html
+++ b/index.html
@@ -14,15 +14,23 @@
     <main class="container">
         <div>
             <h4>View Highscores</h4>
-            <h4 id="timer">Time: 0</h4>
+            <h4 id="timer">Timer: 0</h4>
         </div>
         <h1>Code Quiz</h1>
-        <h4 id=question></h4>
-        <h4 id=answer></h4>
+        <h1 id=question></h1>
+        <!-- <h4 id=answer></h4> -->
+
+        <div class="answers"></div>
+
         <div>
             <button id="start">Start</button>
             <button id="submit">Submit</button>
         </div>
+
+        <!-- <form>
+            <input type="radio" name="choice" value="yes"> Yes
+            <input type="radio" name="choice" value="no"> No
+        </form> -->
 
     </main>
 
