building dynamic radio buttons according to number of choices

--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
             <h4 id="timer">Timer: 0</h4>
         </div>
         <h1>Code Quiz</h1>
-        <h1 id=question></h1>
-        <!-- <h4 id=answer></h4> -->
 
-        <div class="answers"></div>
+        <!-- <h4 id=answer></h4> -->
 
         <div>
             <button id="start">Start</button>
             <button id="submit">Submit</button>
         </div>
 
-        <!-- <form>
-            <input type="radio" name="choice" value="yes"> Yes
-            <input type="radio" name="choice" value="no"> No
-        </form> -->
+        <h1 id=question></h1>
+
+        <div class="answers">
+            <!-- <form class="radio"> -->
+            <!-- JavaScript is generating dynamic elements here -->
+            <!-- </form> -->
+
+        </div>
 
     </main>
 
