--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@
 
         <h1 id=question></h1>
 
-        <div class="answers">
-            <!-- <form class="radio"> -->
-            <!-- JavaScript is generating dynamic elements here -->
-            <!-- </form> -->
-
-        </div>
+        <ul id="choice-list">
+            <!-- dynamicalyy build choices here -->
+        </ul>
 
     </main>
 
