--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/reset.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"> -->
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="icon" href="./images/favicon.ico" type="image/ico" sizes="16x16">
     <title>Question Game</title>
 </head>
 
 <body>
     <main class="container">
+        <!-- make this a navbar  -->
         <div>
-            <h4>View Highscores</h4>
-            <h4 id="timer">Timer: 0</h4>
+            <h5>View Highscores</h5>
+            <h5 id="timer">Timer: 0</h5>
         </div>
-        <h1>Code Quiz</h1>
+        <!-- make this a navbar  -->
+
+        <h1 class="jumbotron" id=question>Jumbotron's Code Quiz</h1>
 
         <!-- <h4 id=answer></h4> -->
 
@@ -25,8 +30,6 @@
             <button id="submit">Submit</button>
         </div>
 
-        <h1 id=question></h1>
-
         <ul id="choice-list">
             <!-- dynamicalyy build choices here -->
         </ul>
@@ -34,6 +37,9 @@
     </main>
 
     <script src="./scripts/script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
 
