added dynamic <ul> creation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <!-- make this a navbar  -->
         <div>
             <h5>View Highscores</h5>
-            <h5 id="timer">Timer: 0</h5>
+            <!-- <h5 id="timer">Timer: 0</h5> -->
+            <p>Timer: <span id="timer">0</span></p>
         </div>
         <!-- make this a navbar  -->
 
@@ -25,14 +26,14 @@
 
         <!-- <h4 id=answer></h4> -->
 
-        <div>
-            <button id="start">Start</button>
-            <button id="submit">Submit</button>
-        </div>
+        <!-- <ul id="choice-list"> -->
+        <!-- dynamicalyy build choices here -->
+        <!-- </ul> -->
 
-        <ul id="choice-list">
-            <!-- dynamicalyy build choices here -->
-        </ul>
+        <div>
+            <button id="start">Begin Quiz</button>
+            <button id="submit">Next Question</button>
+        </div>
 
     </main>
 
