added a container to wrap around <ul>

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
         <!-- <h4 id=answer></h4> -->
 
-        <!-- <ul id="choice-list"> -->
-        <!-- dynamicalyy build choices here -->
-        <!-- </ul> -->
+        <div class="container" id="ul-container">
+            <!-- dynamicalyy build choices here -->
+        </div>
 
         <div>
             <button id="start">Begin Quiz</button>
