--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
         <!-- <h4 id=answer></h4> -->
 
         <div class="container" id="ul-container">
-            <!-- dynamicalyy build choices here -->
+            <!-- dynamicaly build choices here -->
         </div>
 
         <div>
             <button id="start">Begin Quiz</button>
-            <button id="submit">Next Question</button>
         </div>
 
     </main>
