added player score

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <h5>View Highscores</h5>
         <!-- <h5 id="timer">Timer: 0</h5> -->
         <p>Timer: <span id="timer">0</span></p>
+        <p>Score: <span id="score">0</span></p>
       </div>
       <!-- make this a navbar  -->
 
