added local storage, removed internal 'test' array

--- a/index.html
+++ b/index.html
@@ -23,20 +23,19 @@
         <h5>View Highscores</h5>
         <!-- <h5 id="timer">Timer: 0</h5> -->
         <p>Timer: <span id="timer">0</span></p>
-        <p>Score: <span id="score">0</span></p>
+        <!-- <p>Score: <span id="score">0</span></p> -->
       </div>
       <!-- make this a navbar  -->
 
-      <h1 class="jumbotron" id="question">Jumbotron's Code Quiz</h1>
-
-      <!-- <h4 id=answer></h4> -->
+      <h4 class="jumbotron" id="question">Sherbet's JavaScript Quiz</h4>
 
       <div class="container" id="ul-container">
-        <!-- dynamicaly build choices here -->
+        <!-- dynamically build <li> choice list here -->
       </div>
 
       <div>
         <button id="start">Begin Quiz</button>
+        <button id="btn-scores">Show Scores</button>
       </div>
     </main>
 
