deconstructed .js to add 2 new functions for managing the high score list

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <p>Timer: <span id="timer">0</span></p>
         <!-- <p>Score: <span id="score">0</span></p> -->
       </div>
-      <!-- make this a navbar  -->
 
       <h4 class="jumbotron" id="question">Sherbet's JavaScript Quiz</h4>
 
       <div class="container" id="ul-container">
         <!-- dynamically build <li> choice list here -->
+        <!-- dynamically build <li> highscore list here -->
       </div>
 
       <div>
