code clean up, added code comments

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
         <h4>Timer: <span id="timer">0</span></h4>
       </div>
 
-      <h4 class="jumbotron" id="question">JavaScript Fundamentals Quiz</h4>
+      <h4 class="jumbotron" id="question">
+        JavaScript Fundamentals Quiz
+        <p>
+          The Quiz contains 14 questions. Each incorrect selection decrements the timer by 10 seconds. Your final score is equal to the amount of time remaining when all questions have been answered.
+        </p>
+      </h4>
 
       <div class="container" id="ul-container">
         <!-- dynamically build <li> choice list here -->
