added missing requirement confirming user's selection

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       </div>
 
       <div>
+        <div id="answer-confirm"></div>
         <button id="start">Begin Quiz</button>
         <button id="btn-show-scores">Show Scores</button>
         <button id="btn-clear-scores">Clear Scores</button>
